After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 697628 - ximagesink: Compile error without HAVE_XSHM
ximagesink: Compile error without HAVE_XSHM
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-base
1.x
Other Linux
: Normal normal
: 1.1.1
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2013-04-09 10:29 UTC by Alexander Schrab
Modified: 2013-04-09 18:16 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Patch (759 bytes, patch)
2013-04-09 10:29 UTC, Alexander Schrab
committed Details | Review

Description Alexander Schrab 2013-04-09 10:29:28 UTC
Created attachment 241047 [details] [review]
Patch

ximagepool.c:173 accesses ->SHMInfo which is only available when HAVE_XSHM is defined
Comment 1 Sebastian Dröge (slomo) 2013-04-09 18:03:36 UTC
commit c32756a9be0620873ca41769a2ff5fe44993f7a6
Author: Alexander Schrab <alexas@axis.com>
Date:   Tue Apr 9 12:27:48 2013 +0200

    ximagesink: Fix coompiler error without HAVE_XSHM
    
    https://bugzilla.gnome.org/show_bug.cgi?id=697628