ximagesink: Fix coompiler error without HAVE_XSHM

https://bugzilla.gnome.org/show_bug.cgi?id=697628